--- a/app/src/main/res/layout/user_account_info_edit_fragment.xml
+++ b/app/src/main/res/layout/user_account_info_edit_fragment.xml
@@ -1,38 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent">
 
+    <Button
+        android:id="@+id/user_account_info_edit_confirmBttn"
+        android:layout_width="203dp"
+        android:layout_height="48dp"
+        android:text="Confirm"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.954" />
 
-    <TextView
-        android:id="@+id/user_account_info_email_textView"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/user_account_info_edit_password"
         android:layout_width="319dp"
         android:layout_height="56dp"
-        android:hint="Email"
+        android:hint="Pick a password"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.594" />
+        app:layout_constraintVertical_bias="0.597" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="283dp"
-        android:layout_height="45dp"
-        android:text="Account Info"
-        android:textAlignment="center"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/user_account_info_name_textView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.166" />
-
-    <TextView
-        android:id="@+id/user_account_info_phoneNumber_TextView"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/user_account_info_edit_phoneNumber"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Phone number"
@@ -43,8 +41,20 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.499" />
 
-    <TextView
-        android:id="@+id/user_account_info_name_textView"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/user_account_info_edit_lastName"
+        android:layout_width="319dp"
+        android:layout_height="56dp"
+        android:hint="Account owner last name"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.401" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/user_account_info_edit_name"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Account owner name"
@@ -56,39 +66,16 @@
         app:layout_constraintVertical_bias="0.306" />
 
     <TextView
-        android:id="@+id/user_account_info_lastName_textView"
-        android:layout_width="319dp"
-        android:layout_height="56dp"
-        android:hint="Account owner last name"
-        android:textSize="24sp"
+        android:id="@+id/textView4"
+        android:layout_width="283dp"
+        android:layout_height="45dp"
+        android:text="Account Edit"
+        android:textAlignment="center"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.401" />
-
-    <Button
-        android:id="@+id/user_account_info_edit_bttn"
-        android:layout_width="203dp"
-        android:layout_height="48dp"
-        android:text="Edit"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.954" />
-
-    <TextView
-        android:id="@+id/user_account_info_password_textView"
-        android:layout_width="319dp"
-        android:layout_height="56dp"
-        android:hint="Password"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.687" />
+        app:layout_constraintVertical_bias="0.024" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
