--- a/app/src/main/res/layout/business_account_info_edit_screen_fragment.xml
+++ b/app/src/main/res/layout/business_account_info_edit_screen_fragment.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/business_account_info_phoneNumber_text"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_phoneNumber_text"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Company phone number"
@@ -17,23 +17,12 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.45" />
 
-    <TextView
-        android:id="@+id/business_account_info_password_text"
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_password_text"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Pick a password"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.699" />
-
-    <TextView
-        android:id="@+id/business_account_info_email_text"
-        android:layout_width="319dp"
-        android:layout_height="56dp"
-        android:hint="Company @Email"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +34,7 @@
         android:id="@+id/textView5"
         android:layout_width="258dp"
         android:layout_height="48dp"
-        android:text="Account info"
+        android:text="Account Edit"
         android:textAlignment="center"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -54,8 +43,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.024" />
 
-    <TextView
-        android:id="@+id/business_account_info_companyName_text"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_companyName_text"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Company Name"
@@ -67,10 +56,10 @@
         app:layout_constraintVertical_bias="0.367" />
 
     <Button
-        android:id="@+id/business_account_info_editButton"
+        android:id="@+id/business_account_info_editScreen_editButton"
         android:layout_width="170dp"
         android:layout_height="48dp"
-        android:text="Edit"
+        android:text="Enter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -78,8 +67,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.991" />
 
-    <TextView
-        android:id="@+id/business_account_info_name_text"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_name_text"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Account owner name"
@@ -90,8 +79,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.202" />
 
-    <TextView
-        android:id="@+id/business_account_info_lastName_text"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_lastName_text"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Account owner last name"
@@ -102,8 +91,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.284" />
 
-    <TextView
-        android:id="@+id/business_account_info_address_text"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_address_text"
         android:layout_width="319dp"
         android:layout_height="56dp"
         android:hint="Company Address"
@@ -114,8 +103,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.533" />
 
-    <TextView
-        android:id="@+id/business_account_info_description_text"
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/business_account_info_editScreen_description_text"
         android:layout_width="355dp"
         android:layout_height="113dp"
         android:layout_marginTop="40dp"
