--- a/app/src/main/res/navigation/main_navigator.xml
+++ b/app/src/main/res/navigation/main_navigator.xml
@@ -27,7 +27,8 @@
             app:destination="@id/user_registration" />
         <action
             android:id="@+id/action_user_sign_in2_to_user_home_page"
-            app:destination="@id/user_home_page" />
+            app:destination="@id/user_home_page"
+            app:popUpTo="@id/welcome_screen" />
     </fragment>
     <fragment
         android:id="@+id/business_sign_in"
@@ -39,7 +40,8 @@
             app:destination="@id/business_registration_page" />
         <action
             android:id="@+id/action_business_sign_in_to_business_home_page"
-            app:destination="@id/business_home_page" />
+            app:destination="@id/business_home_page"
+            app:popUpTo="@id/welcome_screen" />
     </fragment>
     <fragment
         android:id="@+id/user_registration"
@@ -95,7 +97,15 @@
         android:id="@+id/business_account_info"
         android:name="com.example.boost_it_androif_project.Business.business_account_info"
         android:label="business_account_info"
-        tools:layout="@layout/business_account_info"/>
+        tools:layout="@layout/business_account_info">
+        <argument
+            android:name="business_account_email"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_business_account_info_to_business_account_info_editScreen"
+            app:destination="@id/business_account_info_editScreen"
+            app:popUpTo="@id/business_home_page" />
+    </fragment>
     <fragment
         android:id="@+id/user_account_info"
         android:name="com.example.boost_it_androif_project.User.user_account_info"
@@ -153,6 +163,36 @@
             app:argType="string" />
         <argument
             android:name="userPassword"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/business_account_info_editScreen"
+        android:name="com.example.boost_it_androif_project.Business.business_account_info_editScreen"
+        android:label="business_account_info_edit_screen_fragment"
+        tools:layout="@layout/business_account_info_edit_screen_fragment" >
+        <argument
+            android:name="name"
+            app:argType="string" />
+        <argument
+            android:name="lastName"
+            app:argType="string" />
+        <argument
+            android:name="companyName"
+            app:argType="string" />
+        <argument
+            android:name="phoneNum"
+            app:argType="string" />
+        <argument
+            android:name="address"
+            app:argType="string" />
+        <argument
+            android:name="email"
+            app:argType="string" />
+        <argument
+            android:name="passWord"
+            app:argType="string" />
+        <argument
+            android:name="aboutMe"
             app:argType="string" />
     </fragment>
 </navigation>
