--- a/app/src/main/res/navigation/main_navigator.xml
+++ b/app/src/main/res/navigation/main_navigator.xml
@@ -123,27 +123,53 @@
         android:id="@+id/user_available_ads"
         android:name="com.example.boost_it_androif_project.User.user_available_ads"
         android:label="user_available_ads"
-        tools:layout="@layout/user_available_ads"/>
+        tools:layout="@layout/user_available_ads">
+        <action
+            android:id="@+id/action_user_available_ads_to_post_details"
+            app:destination="@id/post_details" />
+    </fragment>
     <fragment
         android:id="@+id/user_saved_ads"
         android:name="com.example.boost_it_androif_project.User.user_saved_ads"
         android:label="user_saved_ads"
-        tools:layout="@layout/user_saved_ads"/>
+        tools:layout="@layout/user_saved_ads">
+        <argument
+            android:name="user_email"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_user_saved_ads_to_post_details"
+            app:destination="@id/post_details" />
+    </fragment>
     <fragment
         android:id="@+id/business_active_posts"
         android:name="com.example.boost_it_androif_project.Business.business_active_posts"
         android:label="business_active_posts"
-        tools:layout="@layout/business_active_posts"/>
+        tools:layout="@layout/business_active_posts">
+        <action
+            android:id="@+id/action_business_active_posts_to_post_details"
+            app:destination="@id/post_details" />
+        <argument
+            android:name="business_email"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/business_historic_posts"
         android:name="com.example.boost_it_androif_project.Business.business_historic_posts"
         android:label="business_historic_posts"
-        tools:layout="@layout/business_historic_posts"/>
+        tools:layout="@layout/business_historic_posts">
+        <action
+            android:id="@+id/action_business_historic_posts_to_post_details"
+            app:destination="@id/post_details" />
+    </fragment>
     <fragment
         android:id="@+id/business_post_new_add"
         android:name="com.example.boost_it_androif_project.Business.business_post_new_add"
         android:label="business_post_new_add"
-        tools:layout="@layout/business_post_new_add"/>
+        tools:layout="@layout/business_post_new_add">
+        <argument
+            android:name="business_email"
+            app:argType="string" />
+    </fragment>
     <fragment
         android:id="@+id/user_account_info_edit"
         android:name="com.example.boost_it_androif_project.User.user_account_info_edit"
@@ -193,6 +219,15 @@
             app:argType="string" />
         <argument
             android:name="aboutMe"
+            app:argType="string" />
+    </fragment>
+    <fragment
+        android:id="@+id/post_details"
+        android:name="com.example.boost_it_androif_project.post_details"
+        android:label="post_details"
+        tools:layout="@layout/post_details" >
+        <argument
+            android:name="postId"
             app:argType="string" />
     </fragment>
 </navigation>
