--- a/app/src/main/res/layout/ads_list_row.xml
+++ b/app/src/main/res/layout/ads_list_row.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/ads_list_row_image"
         android:layout_width="147dp"
         android:layout_height="148dp"
         app:layout_constraintBottom_toBottomOf="parent"
