continued functionality of app screens

--- a/app/src/main/res/navigation/main_navigator.xml
+++ b/app/src/main/res/navigation/main_navigator.xml
@@ -214,5 +214,8 @@
         <argument
             android:name="postId"
             app:argType="string" />
+        <argument
+            android:name="isBusiness"
+            app:argType="boolean" />
     </fragment>
 </navigation>
