continued functionality of app screens

--- a/app/src/main/res/layout/post_details.xml
+++ b/app/src/main/res/layout/post_details.xml
@@ -82,7 +82,7 @@
         android:id="@+id/post_details_confirmBttn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Confirm"
+        android:text="Edit"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
