added post details edit screen

--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -27,6 +27,7 @@
         android:layout_width="127dp"
         android:layout_height="73dp"
         android:text="User Account"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/welcome_screen_BusinessAccount_bttn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,6 +39,7 @@
         android:layout_width="127dp"
         android:layout_height="72dp"
         android:text="Business Account"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
