--- a/app/src/main/res/layout/post_details.xml
+++ b/app/src/main/res/layout/post_details.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.029"
+        app:layout_constraintVertical_bias="0.01"
         tools:src="@tools:sample/avatars" />
 
     <TextView
@@ -23,6 +23,7 @@
         android:layout_width="330dp"
         android:layout_height="56dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -47,6 +48,7 @@
         android:layout_width="330dp"
         android:layout_height="56dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -59,6 +61,7 @@
         android:layout_width="330dp"
         android:layout_height="56dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
@@ -71,12 +74,13 @@
         android:layout_width="330dp"
         android:layout_height="56dp"
         android:text="TextView"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/post_details_image"
-        app:layout_constraintVertical_bias="0.029" />
+        app:layout_constraintVertical_bias="0.055" />
 
     <Button
         android:id="@+id/post_details_confirmBttn"
