--- a/app/src/main/res/layout/post_details_edit.xml
+++ b/app/src/main/res/layout/post_details_edit.xml
@@ -88,7 +88,7 @@
         android:text="Confirm"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.229"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0" />
@@ -115,5 +115,17 @@
         app:layout_constraintStart_toEndOf="@+id/post_details_edit_image"
         app:layout_constraintTop_toBottomOf="@+id/post_details_edit_camera_button"
         app:layout_constraintVertical_bias="0.043" />
+
+    <Button
+        android:id="@+id/post_details_edit_delete_button"
+        android:layout_width="104dp"
+        android:layout_height="46dp"
+        android:text="delete"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.528"
+        app:layout_constraintStart_toEndOf="@+id/post_details_edit_confirmBttn"
+        app:layout_constraintTop_toBottomOf="@+id/post_details_edit_description"
+        app:layout_constraintVertical_bias="1.0" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
