--- a/app/src/main/res/layout/welcome_screen.xml
+++ b/app/src/main/res/layout/welcome_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/welcome_screen_mainTitle"
         android:layout_width="329dp"
         android:layout_height="88dp"
         android:fontFamily="serif"
@@ -16,6 +16,7 @@
         android:textColor="#000000"
         android:textSize="60sp"
         android:textStyle="bold|italic"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +32,7 @@
         app:layout_constraintBottom_toTopOf="@+id/welcome_screen_BusinessAccount_bttn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_mainTitle"
         app:layout_constraintVertical_bias="0.715" />
 
     <Button
@@ -43,16 +44,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/welcome_screen_mainTitle"
         app:layout_constraintVertical_bias="0.529" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/welcome_screen_selectOne_textView"
         android:layout_width="341dp"
         android:layout_height="53dp"
         android:text="Select one to continue"
         android:textSize="34sp"
         android:textStyle="bold|italic"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
