--- a/app/src/main/res/layout/business_account_info.xml
+++ b/app/src/main/res/layout/business_account_info.xml
@@ -23,6 +23,7 @@
         android:layout_height="56dp"
         android:hint="Pick a password"
         android:textSize="24sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +77,8 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.991" />
+        app:layout_constraintVertical_bias="0.991"
+        tools:visibility="invisible" />
 
     <TextView
         android:id="@+id/business_account_info_name_text"
